--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 * {
   font-family: 'Amatic SC', cursive;
+  font-size: 25px;
 }
 /* You can add global styles to this file, and also import other style files */
