--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,24 @@
-footer {
-  background-color: black;
-  bottom: 0;
-  left: 0;
-}
 .text-muted{
   color: deepskyblue;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /*height: 30px; !* Set the fixed height of the footer here *!*/
+  /*line-height: 60px; !* Vertically center the text there *!*/
+  background-color: black;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+footer > .container {
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+  text-align: center;
 }
