--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,8 @@
 .content {
-  height: 200vh;
- /* background-image: url(//unsplash.it/1000/1000);*/
   background-image:url("../../assets/home/2.jpg");
+  height: 200vh;
   /*background-color: #333;*/
   background-blend-mode: multiply;
   background-size: cover;
-  width: 100%;
+  width: 100% !important;
 }
