Working Navbar Working Footer Working routers Working home

--- a/src/app/landscape/landscape.component.html
+++ b/src/app/landscape/landscape.component.html
@@ -1,3 +1,12 @@
-<p>
-  landscape works!
-</p>
+<div class="slider">
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+</div>
