--- a/src/app/portrait/portrait.component.html
+++ b/src/app/portrait/portrait.component.html
@@ -1,1 +1,50 @@
-<h4>Portrait</h4>
+<div class="container">
+
+
+  <h1>Pure Css Responsive Masonry Gallery</h1>
+  <div class="col-md-12">
+    <div class="row">
+      <hr>
+
+      <div class="gal">
+
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+
+        <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
+
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+
+        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
+
+
+
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
+
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+
+        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
+
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt=""><img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
+
+        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
+
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+        <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
