--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,191 @@
-.content {
-  background-image:url("../../assets/home/2.jpg");
-  height: 200vh;
-  /*background-color: #333;*/
-  background-blend-mode: multiply;
-  background-size: cover;
-  width: 100% !important;
+html,body{margin:0;padding: 0;width: 1280px;height: 810px;background: #000;overflow: hidden; }
+/* entire container, keeps perspective */
+
+.container{
+ /* margin-left: 70px;
+  margin-right: -50px;*/
+  margin: 10%;
+
+
 }
+.flip-container {
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  width: 35%;
+  float:left;
+
+  /*margin-top: 55px;
+  margin-bottom: 0;*/
+}
+
+.flip-container:hover,
+.flip-container.hover{
+  z-index:2;
+  /*-webkit-box-shadow: 0 0 30px #111;*/
+  /*box-shadow: 0 0 30px #111;*/
+}
+/*  UPDATED! flip the pane when hovered */
+.flip-container:hover .back ,
+.flip-container.hover .back {
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.flip-container:hover .front ,
+.flip-container.hover .front {
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+  width: 356px;
+  height: 340px;
+}
+
+/* flip speed goes here */
+.flipper {
+
+  -webkit-transition: all 800ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
+  -webkit-transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  -moz-transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  -o-transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+
+  position: relative;
+
+
+}
+
+/* hide back of pane during swap */
+.front, .back {
+
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: all 800ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
+  -webkit-transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  -moz-transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  -o-transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+  transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/*  UPDATED! front pane, placed above back */
+.front {
+  z-index: 2;
+  -webkit-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+  -webkit-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+
+/*
+    Some vertical flip updates
+*/
+.vertical.flip-container {
+  position: relative;
+}
+
+.vertical .back {
+  -webkit-transform: rotateX(-180deg);
+  -ms-transform: rotateX(-180deg);
+  -o-transform: rotateX(-180deg);
+  transform: rotateX(-180deg);
+}
+
+.vertical.flip-container:hover .back ,
+.vertical.flip-container.hover .back {
+  -webkit-transform: rotateX(0deg);
+  -ms-transform: rotateX(0deg);
+  -o-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+}
+
+.vertical.flip-container:hover .front ,
+.vertical.flip-container.hover .front {
+  -webkit-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  -o-transform: rotateX(180deg);
+  transform: rotateX(180deg);
+
+}
+
+.front {background: #151515;}
+.back {background: #191919;}
+
+.fl-1 .front{background: url(../../assets/portraits/6.png);}
+.fl-1 .back {background: url(../../assets/HM/1.jpg);}
+.fl-2 .front{background: url(../../assets/portraits/2.png);}
+.fl-2 .back {background: url(../../assets/HM/2.jpg);}
+.fl-3 .front{background: url(../../assets/portraits/3.png);}
+.fl-3 .back {background: url(../../assets/HM/5.jpg);}
+.fl-4 .front{background: url(../../assets/portraits/1.png);}
+.fl-4 .back {background: url(../../assets/HM/6.jpg);}
+.fl-5 .front{background: url(../../assets/portraits/1.png);}
+.fl-5 .back {background: url(../../assets/portraits/2.png);}
+.fl-6 .front{background: url(../../assets/portraits/3.png);}
+.fl-6 .back {background: url(../../assets/portraits/4.png);}
+.fl-7 .front{background: url(../../assets/portraits/5.png);}
+.fl-7 .back {background: url(../../assets/portraits/1.png);}
+.fl-8 .front{background: url(../../assets/portraits/6.png);}
+.fl-8 .back {background: url(../../assets/wildlife/4.jpg);}
+.fl-9 .front{background: url(../../assets/portraits/6.png);}
+.fl-9 .back {background: url(../../assets/HM/1.jpg);}
+.fl-10 .front{background: url(../../assets/portraits/2.png);}
+.fl-10 .back {background: url(../../assets/HM/2.jpg);}
+.fl-11 .front{background: url(../../assets/portraits/3.png);}
+.fl-11 .back {background: url(../../assets/HM/5.jpg);}
+.fl-12 .front{background: url(../../assets/portraits/1.png);}
+.fl-12 .back {background: url(../../assets/HM/6.jpg);}
+
+.waves-effect {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 1;
+  will-change: opacity,transform;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  text-align:center;
+}
+
+.clear{float:none;clear:both;}
+
