--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header>
-        
+       
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-warning">
-            <a class="navbar-brand text-dark" href="#" routerLink="/home">KARAN ZAKHMI</a>
+            <a class="navbar-brand text-dark" href="#" routerLink="/home"><img src="../../assets/logo3.png" style="width:170px; height: 50px"></a>
             
     <button class="navbar-toggler btn btn-sm" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
@@ -13,9 +13,9 @@
       <ul class="navbar-nav mr-auto">       
         <li class="nav-item"><a class="nav-link text-dark" href="#" id="link">About</a></li>
         <li class="nav-item" ><a class="nav-link text-dark" href="#" routerLink="/portrait">Portrait</a></li>    
-        <li class="nav-item"><a class="nav-link text-dark" href="#">Landscape</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="#">Events</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="#">Wildlife</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" href="#" routerLink="/landscape">Landscape</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" href="#" routerLink="/event">Events</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" href="#" routerLink="/wildlife">Wildlife</a></li>
         <li class="nav-item"><a class="nav-link text-dark" href="#">Contact</a></li>
       </ul>
       <div class="form-inline mt-2 mt-md-0">
