Fixed Minor Modifications

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,43 +1,43 @@
 
 <div class="hls_sol">
   <ul>
-    <li>
-      <img src="../../assets/portraits/1.jpg?random" alt="">
+    <li routerLink="/portrait">
+      <img src="../../assets/portraits/1.jpg" alt="">
       <div class="hls_sol_data">
-        <h3 routerLink="/portrait" >Portrait</h3>
+        <h3>Portrait</h3>
         <div class="hls_data">
           <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
           <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
         </div>
       </div>
     </li>
-    <li>
+    <li routerLink="/wildlife">
       <!--<img src="https://picsum.photos/600/800/?random" alt="">-->
       <img src="../../assets/wildlife/2.jpg">
       <div class="hls_sol_data">
-        <h3 routerLink="/wildlife">Wildlife</h3>
+        <h3>Wildlife</h3>
         <div class="hls_data">
           <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
           <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
         </div>
       </div>
     </li>
-    <li>
+    <li routerLink="/landscape">
       <!--<img src="https://picsum.photos/600/750/?random" alt="">-->
       <img src="../../assets/landscapes/6.jpeg">
       <div class="hls_sol_data">
-        <h3 routerLink="/landscape">Landscape</h3>
+        <h3>Landscape</h3>
         <div class="hls_data">
           <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
           <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
         </div>
       </div>
     </li>
-    <li>
+    <li routerLink="/event" id="sa">
       <!--<img src="https://picsum.photos/600/710/?random" alt="">-->
       <img src="../../assets/events/2.jpg">
       <div class="hls_sol_data">
-        <h3 routerLink="/event">Events</h3>
+        <h3>Events</h3>
         <div class="hls_data">
           <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
           <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
