--- a/src/app/landscape/landscape.component.html
+++ b/src/app/landscape/landscape.component.html
@@ -1,12 +1,41 @@
 <div class="slider">
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
+  <div>
+    <img src="../../assets/landscapes/1.jpg" class="item img-fluid">
+  </div>
+  <div>
+    <img src="../../assets/landscapes/2.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/3.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/4.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/5.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/1.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/2.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/3.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/4.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/5.jpg" class="item img-fluid">
+
+  </div>
 </div>
