--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,11 @@
 <header>
        
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-warning">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-warning">
             <a class="navbar-brand text-dark" href="#" routerLink="/home"><img src="../../assets/logo3.png" style="width:170px; height: 50px"></a>
             
-    <button class="navbar-toggler btn btn-sm" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-       
+      <span class="fas fa-bars"></span>
     </button>
             
     <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -45,3 +44,22 @@
   </nav>
       
 </header>
+<script>
+  import * as $ from "jquery";
+
+  function checkScroll(){
+    let startY = $('.navbar').height() * 2; //The point where the navbar changes in px
+
+    if($(window).scrollTop() > startY){
+      $('.navbar').addClass("scrolled");
+    }else{
+      $('.navbar').removeClass("scrolled");
+    }
+  }
+
+  if($<any>('.navbar').length > 0){
+    $(window).on("scroll load resize", function(){
+      checkScroll();
+    });
+  }
+</script>
