Responsive Home page Responsive Landscape

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,40 +1,122 @@
 <ul class="gallery_box">
-  <li>
-    <a href="#0"><img src="https://picsum.photos/600/700/?random">
+  <li *ngFor="let s of img">
+    <a href="#"><img src="{{s.url}}">
       <!--<div class="box_data">
-        &lt;!&ndash;<span>Ravi With Bike</span>&ndash;&gt;
+        <span>Ravi With Bike</span>;
       </div>--></a>
   </li>
-  <li>
-    <a href="#0"><img src="https://picsum.photos/600/701/?random">
-      <!--<div class="box_data">
+  <!--<li>
+    <a href="#"><img src="../../assets/events/2.JPG">
+      &lt;!&ndash;<div class="box_data">
         &lt;!&ndash;<span>Ravi Singh</span>&ndash;&gt;
-      </div>--></a>
+      </div>&ndash;&gt;</a>
   </li>
   <li>
-    <a href="#0"><img src="https://picsum.photos/600/702/?random">
-      <!--<div class="box_data">
+    <a href="#"><img src="../../assets/events/3.jpg">
+      &lt;!&ndash;<div class="box_data">
         &lt;!&ndash;<span>White wall</span>&ndash;&gt;
-      </div>--></a>
-  </li>
-  <li>
-    <a href="#0"><img src="https://picsum.photos/600/703/?random">
-      <!--<div class="box_data">
-        &lt;!&ndash;<span>Green Tree</span>&ndash;&gt;
-      </div>--></a>
-  </li>
-  <li style="    position: relative;
-    top: -134px;">
-    <a href="#0"><img src="https://picsum.photos/600/704/?random">
-      <!--<div class="box_data">
-        &lt;!&ndash;<span>Blue</span>&ndash;&gt;
-      </div>--></a>
-  </li>
-  <li>
-    <a href="#0"><img src="https://picsum.photos/600/705/?random">
-      <!--<div class="box_data">
-        &lt;!&ndash;<span>Ravi</span>&ndash;&gt;
-      </div>--></a>
+      </div>&ndash;&gt;</a>
   </li>
 
+  <li>
+    <a href="#"><img src="../../assets/events/4.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Green Tree</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>&lt;!&ndash;style="    position: relative;
+    top: -134px;"&ndash;&gt;
+    <a href="#"><img src="../../assets/events/5.JPG">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Blue</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#"><img src="../../assets/events/6.JPG">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Ravi</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#"><img src="../../assets/events/7.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Ravi With Bike</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#"><img src="../../assets/events/8.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Ravi Singh</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#"><img src="../../assets/events/3.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>White wall</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
 </ul>
+
+
+
+
+&lt;!&ndash;
+<ul class="gallery_box">
+  <li>
+    <a href="#0"><img src="../../assets/events/2.jpg">
+      &lt;!&ndash;<div class="box_data">
+        <span>Ravi With Bike</span>;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#0"><img src="../../assets/events/1.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Ravi Singh</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#0"><img src="../../assets/events/3.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>White wall</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+
+  <li>
+    <a href="#0"><img src="../../assets/events/4.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Green Tree</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>&lt;!&ndash;style="    position: relative;
+    top: -134px;"&ndash;&gt;
+    <a href="#0"><img src="../../assets/home/4.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Blue</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#0"><img src="../../assets/home/1.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Ravi</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#0"><img src="../../assets/events/2.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Ravi With Bike</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#0"><img src="../../assets/events/1.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>Ravi Singh</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>
+  <li>
+    <a href="#0"><img src="../../assets/events/3.jpg">
+      &lt;!&ndash;<div class="box_data">
+        &lt;!&ndash;<span>White wall</span>&ndash;&gt;
+      </div>&ndash;&gt;</a>
+  </li>-->
+</ul>
+
