--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,46 +1,92 @@
+<!--
+<div class="hls_sol">
+  <ul>
+    <li>
+      <img src="https://picsum.photos/600/700/?random" alt="">
+      <div class="hls_sol_data">
+        <h3>Casual</h3>
+        <div class="hls_data">
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Ravi On 500PX</a>
+          <a href="#https://www.facebook.com/ravi7284007" class="btn btn-pro" target="_blank"> Facebook</a>
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="https://picsum.photos/600/800/?random" alt="">
+      <div class="hls_sol_data">
+        <h3>Street</h3>
+        <div class="hls_data">
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Ravi On 500PX</a>
+          <a href="https://www.facebook.com/ravi7284007" class="btn btn-pro" target="_blank"> Facebook</a>
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="https://picsum.photos/600/750/?random" alt="">
+      <div class="hls_sol_data">
+        <h3>Dapper</h3>
+        <div class="hls_data">
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Ravi On 500PX</a>
+          <a href="https://www.facebook.com/ravi7284007" class="btn btn-pro" target="_blank"> Facebook</a>
+        </div>
+      </div>
+    </li>
+    <li>
+      <img src="https://picsum.photos/600/710/?random" alt="">
+      <div class="hls_sol_data">
+        <h3>Minimal</h3>
+        <div class="hls_data">
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Ravi On 500PX</a>
+          <a href="https://www.facebook.com/ravi7284007" class="btn btn-pro" target="_blank"> Facebook</a>
+        </div>
+      </div>
+    </li>
+  </ul>
+-->
 
 <div class="hls_sol">
   <ul>
     <li routerLink="/portrait">
-      <img src="../../assets/portraits/1.jpg" alt="">
+      <!--<img src="https://picsum.photos/600/800/?random" alt="">-->
+      <img src="../../assets/home/1.jpg">
       <div class="hls_sol_data">
-        <h3>Portrait</h3>
+        <!--<h3>Portrait</h3>-->
         <div class="hls_data">
-          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
-          <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Portrait</a>
+          <!--<a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>-->
         </div>
       </div>
     </li>
     <li routerLink="/wildlife">
       <!--<img src="https://picsum.photos/600/800/?random" alt="">-->
-      <img src="../../assets/wildlife/2.jpg">
+      <img src="../../assets/home/25.jpg">
       <div class="hls_sol_data">
-        <h3>Wildlife</h3>
+       <!-- <h3>Wildlife</h3>-->
         <div class="hls_data">
-          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
-          <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Wildlife</a>
+          <!--<a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>-->
         </div>
       </div>
     </li>
     <li routerLink="/landscape">
       <!--<img src="https://picsum.photos/600/750/?random" alt="">-->
-      <img src="../../assets/landscapes/6.jpeg">
+      <img src="../../assets/home/24.JPG">
       <div class="hls_sol_data">
-        <h3>Landscape</h3>
+        <!--<h3>Landscape</h3>-->
         <div class="hls_data">
-          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
-          <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Landscape</a>
+          <!--<a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>-->
         </div>
       </div>
     </li>
     <li routerLink="/event" id="sa">
       <!--<img src="https://picsum.photos/600/710/?random" alt="">-->
-      <img src="../../assets/events/2.jpg">
+      <img src="../../assets/home/7.jpg">
       <div class="hls_sol_data">
-        <h3>Events</h3>
+        <!--<h3>Events</h3>-->
         <div class="hls_data">
-          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Karan Zakhmi</a>
-          <a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>
+          <a href="https://500px.com/ravi7284007" target="_blank" class="hls_title">Events</a>
+          <!--<a href="https://www.instagram.com/krnzakhmi/" class="btn btn-pro" target="_blank"> Instagram</a>-->
         </div>
       </div>
     </li>
