--- a/src/app/landscape/landscape.component.html
+++ b/src/app/landscape/landscape.component.html
@@ -1,9 +1,9 @@
 <div class="slider">
   <div>
-    <img src="../../assets/landscapes/1.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/1.JPG" class="item img-fluid">
   </div>
   <div>
-    <img src="../../assets/landscapes/2.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/2.JPG" class="item img-fluid">
 
   </div>
   <div>
@@ -11,31 +11,48 @@
 
   </div>
   <div>
-    <img src="../../assets/landscapes/4.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/4.JPG" class="item img-fluid">
 
   </div>
   <div>
-    <img src="../../assets/landscapes/5.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/5.JPG" class="item img-fluid">
 
   </div>
   <div>
-    <img src="../../assets/landscapes/1.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/6.JPG" class="item img-fluid">
 
   </div>
   <div>
-    <img src="../../assets/landscapes/2.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/7.jpg" class="item img-fluid">
 
   </div>
   <div>
-    <img src="../../assets/landscapes/3.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/8.JPG" class="item img-fluid">
 
   </div>
   <div>
-    <img src="../../assets/landscapes/4.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/9.jpg" class="item img-fluid">
 
   </div>
   <div>
-    <img src="../../assets/landscapes/5.jpg" class="item img-fluid">
+    <img src="../../assets/landscapes/10.JPG" class="item img-fluid">
 
+  </div>
+  <div>
+    <img src="../../assets/landscapes/11.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/12.jpg" class="item img-fluid">
+
+  </div>
+  <div>
+    <img src="../../assets/landscapes/13.JPG" class="item img-fluid">
+  </div>
+  <div>
+    <img src="../../assets/landscapes/14.jpg" class="item img-fluid">
+  </div>
+  <div>
+    <img src="../../assets/landscapes/15.JPG" class="item img-fluid">
   </div>
 </div>
