--- a/src/app/portrait/portrait.component.html
+++ b/src/app/portrait/portrait.component.html
@@ -1,50 +1,47 @@
 <div class="container">
-
-
-  <h1>Pure Css Responsive Masonry Gallery</h1>
-  <div class="col-md-12">
-    <div class="row">
-      <hr>
-
+  <!--<div class="col-md-12">
+    <div class="row">-->
       <div class="gal">
+        <div *ngFor="let s of img ">
+          <img src="{{s.url}}" alt="">
+        </div>
+       <!-- <img src="../../assets/portraits/1.jpg" alt="">
+        <img src="../../assets/portraits/2.jpg" alt="">
+        <img src="../../assets/portraits/3.jpg" alt="">
+        <img src="../../assets/portraits/4.jpg" alt="">
+        <img src="../../assets/portraits/5.jpg" alt="">
+        <img src="../../assets/portraits/6.jpg" alt="">
+        <img src="../../assets/portraits/13.JPG" alt="">
+        <img src="../../assets/portraits/8.jpg" alt="">
+        <img src="../../assets/portraits/9.jpg" alt="">
+        <img src="../../assets/portraits/10.jpg" alt="">
+        <img src="../../assets/portraits/11.jpg" alt="">
+        <img src="../../assets/portraits/12.jpg" alt="">
+        <img src="../../assets/portraits/7.jpg" alt="">
+        <img src="../../assets/portraits/14.JPG" alt="">
+        <img src="../../assets/portraits/15.JPG" alt="">
+        <img src="../../assets/portraits/24.JPG" alt="">
+        <img src="../../assets/portraits/17.JPG" alt="">
+        <img src="../../assets/portraits/18.JPG" alt="">
+        <img src="../../assets/portraits/19.jpg" alt="">
+        <img src="../../assets/portraits/20.JPG" alt="">
+        <img src="../../assets/portraits/21.jpg" alt="">
+        <img src="../../assets/portraits/23.JPG" alt="">
+        <img src="../../assets/portraits/22.JPG" alt="">
+        <img src="../../assets/portraits/16.JPG" alt="">
 
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-
-        <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
-
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-
-        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
-
-
-
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
-
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-
-        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
-
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt=""><img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
-
-        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
-
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-        <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
-
+        <img src="../../assets/portraits/4.png" alt="">
+        <img src="../../assets/portraits/1.png" alt="">
+        <img src="../../assets/portraits/5.png" alt="">
+        <img src="../../assets/portraits/1.jpeg" alt="">
+        <img src="../../assets/portraits/2.jpeg" alt="">
+        <img src="../../assets/portraits/3.JPEG" alt="">
+        <img src="../../assets/portraits/4.JPEG" alt="">
+        <img src="../../assets/portraits/5.JPEG" alt="">
+-->
       </div>
-
-    </div>
-  </div>
+ <!--   </div>
+  </div>-->
 </div>
 
 
