--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,17 +1,123 @@
-img{ max-width:100%;}
+img{
+  max-width:100%;
+  height: auto;
 
+}
+/*.gallery_box{
+  padding:0;
+  display: flow-root;
+  margin-top: 70px;
+}*/
+li{
+  padding: 0;
+  margin: 0;
+  display: flow-root;
+}
+.gallery_box{
+  /*width:33.333333%;*/
+  max-width: 100% ;
+ /* display:inline-block;*/
+  display: flow-root;
+  float: left;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  -webkit-column-count: 3; /* Chrome, Safari, Opera */
+  -moz-column-count: 3; /* Firefox */
+  column-count: 3;
+  padding:0 0 0 0;
+  margin-top: 70px;
+}
+.gallery_box li img {
+  -webkit-transition: transform 0.5s ease;
+  -o-transition: transform 0.5s ease;
+  transition: transform 0.5s ease;
+
+}
+
+.gallery_box li:hover img {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.3);
+  background:rgba(255,0,39,0.55)
+}
+
+.gallery_box li:nth-child(even) {
+  /*height: 304px;*/
+  height:auto;
+}
+.gallery_box li:nth-child(odd) {
+  /*!*height: 438px;*!*/
+  height: auto;
+}
+/*
+.gallery_box li:nth-child(odd) .box_data{
+  background:rgba(0,0,0,0.17)
+}
+.gallery_box li:nth-child(even) .box_data{
+  background:rgba(0,44,255,0.27)
+}
+.gallery_box .box_data{
+  position:absolute;
+  top: 0;
+  left: 0;
+  right:0;
+  bottom:0;
+  color:#fff;
+}
+.gallery_box .box_data span{
+  position:absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left:0 ;
+  right:0;
+  font-size:24px;
+}
+.gallery_box li:hover .box_data{
+  background:rgba(255,0,39,0.55)
+}
+*/
+
+@media (max-width: 500px) {
+  .gallery_box {
+    -webkit-column-count: 1; /*Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+img{
+  max-width:100%;
+  !*height: auto;*!
+}
+.gallery_box{
+  padding:0;
+  display: flow-root;
+  margin-top: 70px;
+}
 .gallery_box li{
   width:33.333333%;
   max-width: 100% ;
   display:inline-block;
   float: left;
-  text-align: center;
+  !*text-align: center;*!
   overflow: hidden;
-  position: relative;}
-.gallery_box{
-  padding:0;
-  display: flow-root;
-  margin-top: 70px;}
+  position: relative;
+}
 
 .gallery_box li:hover img {
   -moz-transform: scale(1.1);
@@ -20,17 +126,50 @@ img{ max-width:100%;}
   -o-transform: scale(1.1);
   transform: scale(1.1);
 }
-.gallery_box li img{-webkit-transition: transform 0.5s ease;
+.gallery_box li img {
+  -webkit-transition: transform 0.5s ease;
   -o-transition: transform 0.5s ease;
-  transition: transform 0.5s ease;}
+  transition: transform 0.5s ease;
+}
 .gallery_box li:nth-child(even) {
-  height: 304px;
+  !*height: 304px;*!
+  height:auto;
 }
 .gallery_box li:nth-child(odd) {
-  height: 438px;
+  !*height: 438px;*!
+  height: auto;
 }
-.gallery_box li:nth-child(odd) .box_data{ background:rgba(0,0,0,0.17) }
-.gallery_box li:nth-child(even) .box_data{ background:rgba(0,44,255,0.27) }
-.gallery_box .box_data{ position:absolute; top: 0; left: 0; right:0; bottom:0; color:#fff;}
-.gallery_box .box_data span{ position:absolute; top: 50%; transform: translateY(-50%); left:0 ; right:0; font-size:24px;}
-.gallery_box li:hover .box_data{ background:rgba(255,0,39,0.55)}
+.gallery_box li:nth-child(odd) .box_data{
+  background:rgba(0,0,0,0.17)
+}
+.gallery_box li:nth-child(even) .box_data{
+  background:rgba(0,44,255,0.27)
+}
+!*.gallery_box .box_data{
+  position:absolute;
+  top: 0;
+  left: 0;
+  right:0;
+  bottom:0;
+  color:#fff;
+}
+.gallery_box .box_data span{
+  position:absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left:0 ;
+  right:0;
+  font-size:24px;
+}
+.gallery_box li:hover .box_data{
+  background:rgba(255,0,39,0.55)
+}*!
+
+@media (max-width: 500px) {
+  .gallery_box {
+    -webkit-column-count: 1; !* Chrome, Safari, Opera *!
+    -moz-column-count: 1; !* Firefox *!
+    column-count: 1;
+  }
+}
+*/
