--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,14 +1,14 @@
 .text-muted{
-  color: deepskyblue;
+  color:black;
 }
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /*height: 30px; !* Set the fixed height of the footer here *!*/
+  height: 40px; /* Set the fixed height of the footer here */
   /*line-height: 60px; !* Vertically center the text there *!*/
-  background-color: black;
+  /*background-color: black;*/
 
 }
 /* Custom page CSS
