--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,2 +1,8 @@
 @import url(../../../node_modules/bootstrap/dist/css/bootstrap.min.css);
+.fab{
+  color: black;
+}
+.fab:hover{
+  color: dodgerblue;
+}
 
