--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header>
        
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-warning">
-            <a class="navbar-brand text-dark" href="#" routerLink="/home"><img src="../../assets/logo3.png" style="width:170px; height: 50px"></a>
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light ">
+            <a class="navbar-brand text-dark" href="#" routerLink="/home"><img src="../../assets/logo3.png" style="width:170px; height: 50px" data-toggle="collapse" data-target="#navbarCollapse"></a>
             
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
@@ -10,12 +10,12 @@
             
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">       
-        <li class="nav-item"><a class="nav-link text-dark" href="#" id="link">About</a></li>
-        <li class="nav-item" ><a class="nav-link text-dark" href="#" routerLink="/portrait">Portrait</a></li>    
-        <li class="nav-item"><a class="nav-link text-dark" href="#" routerLink="/landscape">Landscape</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="#" routerLink="/event">Events</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="#" routerLink="/wildlife">Wildlife</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="#">Contact</a></li>
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarCollapse"><a class="nav-link text-dark" href="#" routerLink="/about">About</a></li>
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarCollapse"><a class="nav-link text-dark" href="#" routerLink="/portrait">Portrait</a></li>
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarCollapse"><a class="nav-link text-dark" href="#" routerLink="/landscape">Landscape</a></li>
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarCollapse"><a class="nav-link text-dark" href="#" routerLink="/event">Events</a></li>
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarCollapse"><a class="nav-link text-dark" href="#" routerLink="/wildlife">Wildlife</a></li>
+        <li class="nav-item" data-toggle="collapse" data-target="#navbarCollapse"><a class="nav-link text-dark" href="#" routerLink="/contact">Contact</a></li>
       </ul>
       <div class="form-inline mt-2 mt-md-0">
         <a class="nav-link" href="http://facebook.com/karan.zakhmi" target="_blank"><i class="fab fa-facebook-f"></i></a>
