--- a/src/app/portrait/portrait.component.css
+++ b/src/app/portrait/portrait.component.css
@@ -1,23 +1,20 @@
+.container{
+  margin-top:70px;
+}
 .gal {
-
-
   -webkit-column-count: 3; /* Chrome, Safari, Opera */
   -moz-column-count: 3; /* Firefox */
   column-count: 3;
-
-
 }
-.gal img{ width: 100%; padding: 7px 0;}
+.gal img{
+  width: 100%;
+  padding: 7px 0;
+}
+
 @media (max-width: 500px) {
-
   .gal {
-
-
     -webkit-column-count: 1; /* Chrome, Safari, Opera */
     -moz-column-count: 1; /* Firefox */
     column-count: 1;
-
-
   }
-
 }
