--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 * {
   font-family: 'Amatic SC', cursive;
   font-size: 25px;
-
+  font-weight: bolder;
 }
 html {
   position: relative;
@@ -15,7 +15,6 @@ html,body {
   margin:0 !important;
   padding:0 !important;
 }
-
 /* You can add global styles to this file, and also import other style files */
 #link:hover{
   font-weight: bold;
