--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,16 +1,11 @@
 img{
   max-width:100%;
   height: auto;
-
+  padding: 2px;
 }
-/*.gallery_box{
-  padding:0;
-  display: flow-root;
-  margin-top: 70px;
-}*/
 li{
-  padding: 0;
-  margin: 0;
+ /* padding: 0;
+  margin: 0;*/
   display: flow-root;
 }
 .gallery_box{
@@ -25,33 +20,48 @@ li{
   -webkit-column-count: 3; /* Chrome, Safari, Opera */
   -moz-column-count: 3; /* Firefox */
   column-count: 3;
-  padding:0 0 0 0;
+  -webkit-column-gap: 10px; /* Chrome, Safari, Opera */
+  -moz-column-gap: 10px; /* Firefox */
+  column-gap: 10px;
+  padding:0;
   margin-top: 70px;
 }
 .gallery_box li img {
   -webkit-transition: transform 0.5s ease;
   -o-transition: transform 0.5s ease;
   transition: transform 0.5s ease;
-
 }
-
 .gallery_box li:hover img {
   -moz-transform: scale(1.1);
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1);
   transform: scale(1.3);
-  background:rgba(255,0,39,0.55)
+  /*background:rgba(255,0,39,0.55)*/
+  background: azure;
+}
+@media (max-width: 500px) {
+  .gallery_box {
+    -webkit-column-count: 1; /*Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+  }
 }
 
-.gallery_box li:nth-child(even) {
-  /*height: 304px;*/
+/*.gallery_box{
+  padding:0;
+  display: flow-root;
+  margin-top: 70px;
+}*/
+
+/*.gallery_box li:nth-child(even) {
+  !*height: 304px;*!
   height:auto;
 }
 .gallery_box li:nth-child(odd) {
-  /*!*height: 438px;*!*/
+  !*!*height: 438px;*!*!
   height: auto;
-}
+}*/
 /*
 .gallery_box li:nth-child(odd) .box_data{
   background:rgba(0,0,0,0.17)
@@ -80,13 +90,6 @@ li{
 }
 */
 
-@media (max-width: 500px) {
-  .gallery_box {
-    -webkit-column-count: 1; /*Chrome, Safari, Opera */
-    -moz-column-count: 1; /* Firefox */
-    column-count: 1;
-  }
-}
 
 
 
