--- a/src/app/portrait/portrait.component.css
+++ b/src/app/portrait/portrait.component.css
@@ -5,10 +5,15 @@
   -webkit-column-count: 3; /* Chrome, Safari, Opera */
   -moz-column-count: 3; /* Firefox */
   column-count: 3;
+  -webkit-column-gap: 10px; /* Chrome, Safari, Opera */
+  -moz-column-gap: 10px; /* Firefox */
+  column-gap: 10px;
+
+
 }
 .gal img{
   width: 100%;
-  padding: 7px 0;
+  padding: 0 0 3px 0;
 }
 
 @media (max-width: 500px) {
