snapcode working About page working

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,40 @@
-<p>
-  about works!
-</p>
+<!--<main class="about">-->
+  <div class="container">
+    <section class="grid info">
+      <div class="column-xs-12 column-md-1">
+        <div class="about">
+          <h1 class="section-heading">About Me</h1>
+        </div>
+      </div>
+      <div class="column-xs-12 column-md-4">
+        <img src="../../assets/portraits/22.JPG">
+      </div>
+      <div class="column-xs-12 column-md-7">
+        <div class="intro">
+          <p>Throughout much of my adult life, I’ve been traveling, seeking adventure and ways
+          to learn from and interact with cultures which are very different from my own. Photography became a great
+          excuse to look deeper and to make my experiences more rich and intense.
+
+          I usually find my subjects by chance, while I travel. But, I'm particularly drawn to ancient traditions
+          which are still surviving and evolving. To stories of people working in unique, challenging environments
+          and those who live in a close bond with nature.
+
+          My main goal as a photographer is to create the kinds of images which combine a strong sense of story and
+          convey what it felt like to be with the people I met in the places I visited.</p>
+
+        </div>
+      </div>
+      <div class="column-xs-12 column-md-7">
+        <blockquote>
+          <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa provident
+            voluptatem consectetur illum, natus placeat incidunt tempora architecto aliquid
+            recusandae eligendi repudiandae ex laborum neque quod cum id facere nulla.</h5>
+        </blockquote>
+      </div>
+      <div class="column-xs-12 column-md-5">
+        <img src="../../assets/home/g.jpg" class="image">
+      </div>
+    </section>
+  </div>
+<!--</main>-->
+
