--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-   <div class="container">
-    <span class="text-muted">© 2019 Karan Zakhmi Photography | Designed by 35PX</span>
+   <div class="container bg-light">
+    <span class="text-muted bg-light">© 2019 Karan Zakhmi Photography | Designed by 35PX</span>
    </div>
 </footer>
