--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,10 @@
 <header>
-       
   <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light ">
             <a class="navbar-brand text-dark" href="#" routerLink="/home"><img src="../../assets/logo3.png" style="width:170px; height: 50px" data-toggle="collapse" data-target="#navbarCollapse"></a>
-            
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
       <span class="fas fa-bars"></span>
     </button>
-            
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">       
         <li class="nav-item" data-toggle="collapse" data-target="#navbarCollapse"><a class="nav-link text-dark" href="#" routerLink="/about">About</a></li>
@@ -23,10 +20,10 @@
         <a class="nav-link" href="https://twitter.com/krnzakhmi" target="_blank"><i class="fab fa-twitter"></i></a>
         <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModalCenter"><i class="fab fa-snapchat-ghost"></i></a>
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered bg-light" role="document">
+          <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-body">
-                <img src="../../assets/Snapcode.jpg" height="400" width="auto"/>
+                <img src="../../assets/snapcode.JPG" height="470px" width="450px" alt=""/>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
@@ -34,15 +31,9 @@
             </div>
           </div>
         </div>
-      </div>
-      <!--            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
-      <!--            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-      <!--          </form>-->
-              
-    </div>
-          
+      </div>   
+    </div>    
   </nav>
-      
 </header>
 <script>
   import * as $ from "jquery";
