--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -25,6 +25,7 @@ li{
   column-gap: 10px;
   padding:0;
   margin-top: 70px;
+  margin-bottom:35px;
 }
 .gallery_box li img {
   -webkit-transition: transform 0.5s ease;
