--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,7 +4,7 @@
 
 .footer {
   position: absolute;
-  bottom: 0;
+  bottom: 25px;
   width: 100%;
   height: 40px; /* Set the fixed height of the footer here */
   /*line-height: 60px; !* Vertically center the text there *!*/
